# wsh

./: .cdtproject  .cproject  .cvsignore  .gitignore  .project  CMakeLists.txt  Makefile  README.1ST  README.md  bash.bat  clean.bat  make_insure.bat  make_vc.bat  runtests.bat  sed_replace.sh
bash_src/: alias.c  ansi_stdlib.h  array.c  arrayfunc.c  assoc.c  bash-Makefile  bashhist.c  bashline.c  bashtypes.h  bracecomp.c  braces.c  builtins.h  command.h  config.h  copy_cmd.c  dispose_cmd.c  dispose_cmd.h  error.c  eval.c  execute_cmd.c  expr.c  externs.h  filecntl.h  findcmd.c  flags.c  flags.h  general.c  general.h  getcwd.c  hashcmd.c  hashlib.c  input.c  input.h  jobs.c  jobs.h  list.c  locale.c  mailcheck.c  make_cmd.c  memalloc.h  (+33 more)
bash_src/Bash/: .cvsignore  Bash.mak
bash_src/Bash_builtins/: Bash_builtins.mak  insure.mak
bash_src/builtins/: alias.c  bashgetopt.c  bind.c  builtext.h  cd.c  colon.c  command.c  common.c  common.h  declare.c  declare.def  echo.c  eval.c  evalfile.c  evalstring.c  exec.c  exec.def  fc.c  fg_bg.c  gen-helpfiles.c  getopt.c  getopts.def  hash.c  help.c  history.c  history.def  inlib.c  jobs.c  kill.c  kill.def  let.c  mkbuiltins  psize.c  read.c  read.def  send_files  set.c  set.def  setattr.c  shift.c  (+12 more)
bash_src/documentation/: Makefile  bash.txt  builtins.txt
bash_src/examples/loadables/: basename.c  dirname.c  head.c  hello.c  id.c  ln.c  logname.c  mkdir.c  mypid.c  pathchk.c  printenv.c  push.c  realpath.c  rmdir.c  setpgid.c  sleep.c  strftime.c  sync.c  tee.c  template.c  truefalse.c  tty.c  uname.c  unlink.c  whoami.c
bash_src/include/: shmbutil.h  shtty.h
bash_src/lib/doc-support/: texindex.c
bash_src/lib/glob/: Makefile  glob.c  gmisc.c  smatch.c  strmatch.c  strmatch.h  xmbsrtowcs.c
bash_src/lib/intl/: gettextP.h  loadmsgcat.c
bash_src/lib/malloclib/: alloca.c  mtrace.c
bash_src/lib/posixheaders/: stdc.h
bash_src/lib/readline/: bind.c  colors.c  complete.c  display.c  history.c  input.c  readline.c  rldefs.h  savestring.c  send_files  signals.c
bash_src/lib/sh/: clktck.c  clock.c  fmtullong.c  fmtumax.c  fnxform.c  fpurge.c  getcwd.c  getenv.c  inet_aton.c  mailstat.c  makepath.c  mbscasecmp.c  mbschr.c  mbscmp.c  netconn.c  netopen.c  oslib.c  pathcanon.c  pathphys.c  rename.c  setlinebuf.c  shmbchar.c  shquote.c  shtty.c  spell.c  strcasecmp.c  strcasestr.c  strchrnul.c  strdup.c  strerror.c  strftime.c  stringlist.c  stringvec.c  strtol.c  strtoll.c  strtoul.c  strtoull.c  times.c  (+16 more)
bash_src/support/: bashbug.sh  bashversion.c  getcppsyms.c  mksignames.c  signames.c
bash_src/tests/: run-all
dum_inc/: dirent.c  dirent.h  dsignal.h  fcntl.h  grp.h  pwd.h  sgtty.h  signal.c  unistd.c  unistd.h
dum_inc/bits/: fcntl-linux.h  fcntl.h  param.h  stat.h  types.h
dum_inc/sys/: param.h  stat.h
scripts/: configure.sh  sed_replace.sh
shelltools/: .cvsignore  README.txt  start_bash.bat
testcases/: bug1585.sh  runtests.sh  scriptcall_child.sh  test_bug1585.sh  test_bug1816.sh  test_bug871.sh  test_fncalls.sh  test_if.sh  test_scriptcall.sh  test_scriptcall2.sh  test_scriptcall3.sh
v01/bash-1.14.2/: INSTALL  MANIFEST  Makefile  NEWS  bashline.c  braces.c  config.h.mini  copy_cmd.c  cpp-Makefile  dispose_cmd.c  endian.c  error.c  execute_cmd.h  externs.h  flags.c  hello  machines.h  make_out  newversion.aux  nt_vc.c  parse.y  posixstat.h  print_cmd.c  shell.c  siglist.h  signames.aux  signames.c  test.c  trap.c  win_nt.h  y_tab.c
v01/dum_inc/: bash_dum.c  bcopy.c  bsdtty.h  dirent.c  dtypes.h  unistd.c
(+52 files in other folders)
